# Sabot

./: .dockerignore  .env.example  .gitignore  .gitmodules  ABSOLUTE_FINAL_SUMMARY.md  ACTUAL_STATUS_TESTED.md  ALL_OPTIMIZATIONS_ENABLED.md  ALL_TPCH_QUERIES_COMPLETE.md  API_VERIFICATION_SUMMARY.md  ARCHITECTURE_REFACTORING_SUMMARY.md  ARCHITECTURE_UNIFICATION_FINAL.md  ARCHITECTURE_UNIFICATION_STATUS.md  ARROW_CONVERSION_AUDIT.md  ASOF_JOIN_IMPLEMENTATION.md  BENCHMARKS_FINAL_COMPLETE.md  BENCHMARK_MEASUREMENT_EXPLAINED.md  BENCHMARK_RESULTS.md  BENCHMARK_SCALE_0.1_RESULTS.md  BREAKTHROUGH_DISCOVERY.md  BUILD_AND_TEST_COMPLETE.md  BUILD_SUCCESS_SUMMARY.md  C++_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  CHANGES_SUMMARY.md  CHUNKED_LAZY_RESULTS.md  CLAUDE.md  CLICKBENCH_FULL_RESULTS.md  CLICKBENCH_READY.md  CLICKBENCH_RESULTS_FIRST_2_QUERIES.md  CLICKBENCH_RESULTS_QUERIES_1_TO_5.md  COMPLETE_BENCHMARK_FINAL_STATUS.md  COMPLETE_CRYPTO_INFRASTRUCTURE.md  COMPLETE_FINAL_HONEST_REPORT.md  COMPLETE_FINAL_STATUS.md  COMPLETE_FINTECH_SUMMARY.md  COMPLETE_PYSPARK_MIGRATION_GUIDE.md  COMPLETE_SESSION_FINAL.md  COMPLETE_SESSION_FINAL_REPORT.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_TPCH_IMPLEMENTATION.md  COMPREHENSIVE_FINAL_REPORT.md  (+332 more)
MarbleDB/: .gitignore  ARROW_QUERY_API_SESSION_SUMMARY.md  ARROW_QUERY_API_STATUS.md  BUILD_FIX_PLAN.md  BUILD_STATUS_UPDATE.md  CMakeLists.txt  CMakeLists_test.txt  COMPLETION_STATUS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  MARBLEDB_REQUIREMENTS.md  MILESTONE_1_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  README_PERFORMANCE.md  SEARCH_INDEX_QUICKSTART.md  demo_disruptor_simple.cpp  demo_disruptor_standalone.cpp  demo_mvcc.cpp  test_p0_features.cpp  test_p1_iterator.cpp  test_p1_optimization.cpp  test_real_disruptor_batch.cpp  test_real_mvcc_complete.cpp  test_real_mvcc_db_operations.cpp  test_real_mvcc_integration.cpp  test_sabotql_triple_store.cpp  test_simple.cpp
MarbleDB/benchmarks/: BENCHMARK_RESULTS.md  CMakeLists.txt  batch_write_bench.cpp  bench_config_example.json  common.cpp  common.h  common.hpp  compression_bench.cpp  db_performance.cpp  generate_comparison_report.py  large_scale_comparison.cpp  marble_bench_harness.cpp  marble_bench_harness.hpp  marble_bench_simple.cpp  marble_vs_rocksdb_comparison.cpp  marbledb_baseline.cpp  mutex_overhead_bench.cpp  p1_optimization_bench.cpp  performance_optimizations_bench.cpp  query_bench.cpp  read_bench.cpp  rocksdb_api_optimizations_bench.cpp  rocksdb_baseline.cpp  run_storage_benchmarks.sh  scan_bench.cpp  searchable_memtable_bench.cpp  simple_bench.cpp  simple_p1_test.cpp  simple_storage_bench  simple_storage_bench.cpp  standalone_optimizations_test.cpp  standalone_test  storage_techniques_bench.cpp  test_direct_io  test_direct_io.cpp  test_index_performance  test_index_performance.cpp  test_io_uring  test_io_uring.cpp  test_large_block_writes  (+7 more)
MarbleDB/cmake/: MarbleDBConfig.cmake.in
MarbleDB/docs/: ADVANCED_FEATURES.md  ARROW_FLIGHT_RAFT_SETUP.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_2025-11-08.md  BENCHMARK_RESULTS_2025-11-10.md  BUILD_SEARCH_INDEX_WITH_MARBLEDB.md  CODE_SNIPPETS.md  DUCKDB_INTEGRATION_PLAN.md  FEATURE_COMPLETE_GUIDE.md  FLEXIBLE_CAPABILITIES_STATUS.md  FLEXIBLE_TABLE_CAPABILITIES.md  HOT_KEY_CACHE.md  INSERTBATCH_ITERATOR_DATA_FLOW.md  INSERTBATCH_ITERATOR_INVESTIGATION.md  INVESTIGATION_SUMMARY.md  MARBLEDB_ROADMAP_REVIEW.md  MARBLEDB_VS_LUCENE_RESEARCH.md  MERGE_STRATEGIES.md  MONITORING_METRICS.md  NEXT_FEATURES_PROPOSAL.md  OLTP_FEATURES.md  OPTIMIZATIONS_IMPLEMENTED.md  PERFORMANCE_OPTIMIZATIONS_FINAL.md  POINT_LOOKUP_OPTIMIZATIONS.md  RAFT_INTEGRATION.md  README.md  README_API.md  README_INVESTIGATION.md  ROCKSDB_BENCHMARK_RESULTS_2025.md  ROCKSDB_OPTIMIZATIONS_2025-11-08.md  SABOT_INTEGRATION_GUIDE.md  SEARCH_INDEX_INTEGRATION_SUMMARY.md  TECHNICAL_PLAN.md  (+8 more)
sabot_core/: CMakeLists.txt  README.md
sabot_cypher/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  CURRENT_STATUS.md  FINAL_REPORT.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  OPERATORS_IMPLEMENTED.md  PROJECT_COMPLETE_STATUS.md  PROJECT_SUMMARY.md  README_COMPLETE.md  SABOT_CYPHER_SUMMARY.md  SKELETON_COMPLETE.md  STATUS.md  STUBS_COMPLETE.md  UNIFIED_STATE_STORE.md  __init__.py  history.txt  sabot_cypher.cpp  sabot_cypher.pyx  sabot_cypher_simple.pyx  sabot_cypher_working.cpp  setup.py  setup_working.py  test_cython_module.py  test_import.py  test_property_access.cpp
sabot_graph/: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  INDEX.md  README.md  SABOT_GRAPH_COMPLETE.md  STATUS.md  __init__.py  sabot_graph_python.py  sabot_graph_streaming.py  test_sabot_graph_bridge.cpp
sabot_ql/: BENCHMARK_RESULTS_POST_FIX.md  BENCHMARK_SUMMARY.md  BUILD_AND_PARSE_STATUS_FINAL.md  BUILD_AND_TEST_SUMMARY.md  BUILD_FIXES_NEEDED.md  BUILD_PROGRESS.md  BUILD_STATUS.md  BUILD_SUCCESS_SUMMARY.md  CMakeLists.txt  COMPLETE_STATUS.md  IMPLEMENTATION_STATUS.md  LAYER1_COMPLETE.md  LAYER2_COMPLETE.md  PARSER_COMPARISON.md  PARSER_FIXES_COMPLETE.md  PARSER_FIX_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_PROGRESS.md  QLEVER_COMPARISON.md  QUICKSTART.md  QUICKSTART_SABOT.md  README.md  SABOT_INTEGRATION.md  SPARQL_TEST_PLAN.md  STATUS.md  VOCABULARY_FIX_FINAL_RESULTS.md  VOCABULARY_FIX_RESULTS.md  build_graph_bindings.py  graph.py  verify_aggregation_build.sh
sabot_sql/: ATTRIBUTIONS.md  CMakeLists.txt  CMakeLists_minimal.txt  CPackConfig.cmake  CPackSourceConfig.cmake  EMBEDDED_MARBLEDB_ARCHITECTURE.md  Makefile  PHASE3_COMPLETE.md  PHASE4_PLAN.md  QUICKSTART.md  README.md  STATUS.md  STREAMING_SQL_COMPLETE.md  STREAMING_SQL_FINAL_PROGRESS.md  STREAMING_SQL_IMPLEMENTATION_COMPLETE.md  STREAMING_SQL_PROGRESS.md  STREAMING_SQL_TEST_RESULTS.md  __init__.py  build_cython.py  cmake_install.cmake  datetime_functions.py  plan_bridge.pxd  plan_bridge.pyx  sabot_sql.pyx  sabot_sql_c.pyx  sabot_sql_cffi.c  sabot_sql_cffi.pyx  sabot_sql_duckdb_direct.py  sabot_sql_minimal.cpp  sabot_sql_minimal.pyx  sabot_sql_python.py  sabot_sql_simple.cpp  sabot_sql_simple.pyx  sabot_sql_streaming.py  setup.py  setup_plan_bridge.py
(+2010 files in other folders)
